fix: home cloudnative logo overflow

--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -15,3 +15,8 @@ Add styles or override variables from the theme here.
     border-width: 0;
     padding: 0.5em;
 }
+
+.home-cloudnative-logo {
+  width: 100%;
+  max-width: 600px;
+}
